--- a/actividad1/css/first.css
+++ b/actividad1/css/first.css
@@ -1,3 +1,15 @@
+html,
+body {
+  width: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1vh;
+  font-family: sans-serif;
+  background-color: #ffffff;
+}
+
 /* Telefonos */
 @media only screen and (max-width: 600px) {
   header {
@@ -17,10 +29,18 @@
 
   div {
     align-items: center;
-    padding: 4vh 4vh 0 4vh;
   }
 
   article {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  aside {
+    width: 100%;
+  }
+
+  .cont-tecnologies {
     width: 100%;
   }
 }
@@ -44,10 +64,14 @@
 
   div {
     align-items: center;
-    padding: 4vh 4vh 0 4vh;
   }
 
   article {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .cont-tecnologies {
     width: 100%;
   }
 }
@@ -71,10 +95,14 @@
 
   div {
     align-items: center;
-    padding: 4vh 4vh 0 4vh;
   }
 
   article {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .cont-tecnologies {
     width: 100%;
   }
 }
@@ -101,7 +129,6 @@
 
   div {
     align-items: start;
-    padding: 4vh;
   }
 
   h2 {
@@ -115,6 +142,11 @@
   article {
     width: 80%;
     border-radius: 1.2vh;
+    flex-direction: row;
+  }
+
+  aside {
+    width: 40%;
   }
 }
 
@@ -140,7 +172,6 @@
 
   div {
     align-items: start;
-    padding: 4vh;
   }
 
   h2 {
@@ -163,17 +194,17 @@ header {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  color: aliceblue;
-  background-color: #303030;
+  background-color: #293239;
 }
 
 h1 {
   font-size: clamp(2rem, 3vw, 2rem);
+  color: #ffffff;
 }
 
 nav {
   height: clamp(calc(3.7rem * 0.6), calc(10vh * 0.6), calc(6.7rem * 0.6));
-  background-color: #303030;
+  background-color: #293239;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -192,53 +223,55 @@ li {
   margin: 0 1.2vh;
   font-size: clamp(calc(2rem * 0.6), calc(3vw * 0.6), calc(2rem * 0.6));
   text-decoration: underline;
-  color: aliceblue;
+  color: #d2e5e9;
   transition: 0.2s ease-in-out;
 }
 
 li:hover {
   text-decoration: none;
   cursor: pointer;
-  color: rgb(201, 208, 214);
+  color: #ffffff;
 }
 
 li:active {
   text-decoration: underline;
-  color: aliceblue;
+  color: #ffffff;
 }
 
 section {
   display: flex;
   text-align: center;
   box-sizing: border-box;
-  padding: 4vh;
+  padding: 8vh;
   gap: 4vh;
-  background-color: #303030;
-  background: linear-gradient(60deg, #303030, #404040);
+  background-color: #293239;
 }
 
 div {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 4vh;
+  flex: 1;
   width: clamp(20rem, 80%, 60rem);
+  height: 28rem;
 }
 
 p {
   font-size: clamp(calc(2rem * 0.8), calc(2vw * 0.8), calc(3.2rem * 0.8));
   margin: 0;
-  color: #c9c9c9;
+  color: #d2e5e9;
 }
 
 h2 {
   font-size: clamp(2rem, 3vw, 2rem);
-  color: aliceblue;
+  color: #ffffff;
   margin: 0;
 }
 
 button {
   border-radius: 1.2vh;
-  padding: clamp(0.8rem, 1.2vh, 2vh);
+  padding: clamp(0.8rem, 1.2vh, 2vh) clamp(1rem, 1.5vh, 2.5vh);
   font-size: clamp(calc(2rem * 0.5), calc(2vw * 0.5), calc(3.2rem * 0.5));
   border-radius: 1.2vh;
   border: none;
@@ -251,7 +284,7 @@ button:hover {
 }
 
 img {
-  height: clamp(20rem, 20vw, 37.5rem);
+  width: clamp(20rem, 30vw, 28rem);
   border-radius: 1.2vh;
   margin: auto 0;
 }
@@ -261,11 +294,97 @@ article {
   text-align: center;
   box-sizing: border-box;
   padding: 4vh;
-  gap: 4vh;
-  background-color: #303030;
-  background: linear-gradient(60deg, #303030, #404040);
+  gap: 2vh;
+  background-color: #293239;
 }
 
-h2:last-of-type{
-    text-align: center;
+aside {
+  display: flex;
+  flex-direction: column;
+  gap: 2vh;
+}
+
+.cont-habilities {
+  box-sizing: border-box;
+  border-radius: 1.2vh;
+  background-color: #3b4851;
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  padding: 0;
+  flex: none;
+  gap: 3vh;
+  padding: 4vh;
+  width: 100%;
+  height: auto;
+}
+
+.img-habilities {
+  height: 4.4rem;
+  width: 4.4rem;
+  margin: 0;
+  border-radius: 0;
+}
+
+.cont-info-habilities {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  height: 100%;
+  gap: 2vh;
+}
+
+h3 {
+  margin: 0;
+  color: #ffffff;
+  font-size: clamp(calc(2rem * 0.7), calc(3vw * 0.7), calc(2rem * 0.7));
+  text-align: left;
+}
+
+span {
+  text-align: left;
+  margin: 0;
+  color: #d2e5e9;
+  font-size: clamp(calc(2rem * 0.6), calc(3vw * 0.6), calc(2rem * 0.6));
+}
+
+.button-learn-more {
+  padding: clamp(0.4rem, 0.6vh, 1vh) clamp(0.5rem, 0.75vh, 1.25vh);
+  font-size: clamp(calc(2rem * 0.5), calc(3vw * 0.5), calc(2rem * 0.5));
+}
+
+.cont-tecnologies {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 2vh;
+  padding: 4vh;
+  height: auto;
+  box-sizing: border-box;
+  background-color: #3b4851;
+  border-radius: 1.2vh;
+}
+
+.tit-tecnologies {
+  width: 100%;
+  text-align: center;
+}
+
+.cont-images-tecnologies {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 2vh;
+  width: 100%;
+  margin: 0;
+}
+
+.img-tecnologies {
+  height: 5rem;
+  width: 5rem;
+  margin: auto 2vh;
+  border-radius: 0;
 }
